--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,61 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* header */
+
+header{
+    max-width:calc(100vw - 50px);
+    height: 85px;
+    opacity: 0.5;
+    position: fixed;
+    top: 0em;
+    right: 0em;
+    background-color: black;
+    z-index: 98; 
+}
+
+header div{
+    margin-left: 100vw;
+}
+
+
+/*aside */
+
+aside{
+    max-width: 50px;
+    height: calc(100vh - 100px);
+    background-color: black;
+    
+}
+
+main{
+    max-width:100vw;
+    height: calc(100vh - 100px);
+    background-color: #141922; 
+    overflow-y: scroll;
+    position: relative;
+}
+
+.btn-upgrade{
+    padding: .9em 2.5em;
+    border: 1px solid white;
+    border-radius: 30px;
+    text-decoration: none;
+    font-size: 12px;
+    color: white;
+    position: fixed;
+    top: 1.6em;
+    right: 1.9em;
+    z-index: 99;
+}
+
+footer{
+    max-width: 100vw;
+    height: 100px;
+    background-color:#282828;
+}
+
+
+
+
