--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,15 @@
 
 /* header */
 
-header{
-    max-width:calc(100vw - 50px);
+.container-header{
+    max-width:100vw;
     height: 85px;
     opacity: 0.5;
     position: fixed;
-    top: 0em;
-    right: 0em;
+    inset: 0 0 auto 50px;
     background-color: black;
-    z-index: 98; 
+    z-index: 97; 
 }
-
-header div{
-    margin-left: 100vw;
-}
-
 
 /*aside */
 
@@ -28,16 +22,70 @@ aside{
     max-width: 50px;
     height: calc(100vh - 100px);
     background-color: black;
-    
+    color: white;
+    padding-top: 0.2em;
+    position: relative;
 }
 
+
+
+aside img{
+    filter: invert(1);
+    width: 60%;
+    margin-left: .6em;
+}
+
+aside .fa-sharp{
+    color:#D2D2D2;
+    font-size:1.5em;
+    margin-left: .4em;
+    margin-top: .4em;
+}
+
+.fa-lines-leaning{
+    color:#D2D2D2;
+    font-size: 1.5em;
+    margin-left: .5em;
+    margin-top: .4em;
+    transform: rotateZ(180deg) rotateX(180deg);
+}
+
+.icon-bottom{
+    position: absolute;
+    inset: auto 0 0 0;
+}
+
+.icon-bottom .fa-arrow-down{
+    color:#D2D2D2;
+    font-size:.5em;
+    padding: .2em .3em;
+    border: 1px solid #D2D2D2 ;
+    border-radius: 100%;
+    margin-left: 2.4em;
+    margin-bottom: 3em;
+}
+
+.fa-circle-user{
+    color:#D2D2D2 ;
+    background-color:white;
+    font-size:2em;
+    margin-left: .3em;
+    margin-bottom: .4em;
+    border-radius: 100%;
+}
+
+
+/* main */
+
 main{
+    position: fixed;
+    inset: 0 0 0 50px;
     max-width:100vw;
     height: calc(100vh - 100px);
     background-color: #141922; 
     overflow-y: scroll;
-    position: relative;
-}
+    padding-top: 85px;
+   }
 
 .btn-upgrade{
     padding: .9em 2.5em;
@@ -49,13 +97,14 @@ main{
     position: fixed;
     top: 1.6em;
     right: 1.9em;
-    z-index: 99;
+    z-index: 98;
 }
 
 footer{
     max-width: 100vw;
     height: 100px;
     background-color:#282828;
+    z-index: 99;
 }
 
 
