--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family:'Roboto';
+}
+
 /* header */
 
 .container-header{
@@ -14,6 +18,19 @@
     inset: 0 0 auto 50px;
     background-color: black;
     z-index: 97; 
+}
+
+.btn-upgrade{
+    padding: .9em 2.5em;
+    border: 1px solid white;
+    border-radius: 30px;
+    text-decoration: none;
+    font-size: 12px;
+    color: white;
+    position: fixed;
+    top: 1.6em;
+    right: 1.9em;
+    z-index: 98;
 }
 
 /*aside */
@@ -27,12 +44,10 @@ aside{
     position: relative;
 }
 
-
-
 aside img{
     filter: invert(1);
     width: 60%;
-    margin-left: .6em;
+    margin-left: .5em;
 }
 
 aside .fa-sharp{
@@ -87,18 +102,35 @@ main{
     padding-top: 85px;
    }
 
-.btn-upgrade{
-    padding: .9em 2.5em;
-    border: 1px solid white;
-    border-radius: 30px;
-    text-decoration: none;
-    font-size: 12px;
-    color: white;
-    position: fixed;
-    top: 1.6em;
-    right: 1.9em;
-    z-index: 98;
+/* navbar */
+
+nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5em;
+    padding: .3em 0;
+    justify-content: center;
+    line-height: 3em;
 }
+
+nav li{
+    list-style: none;
+}
+
+nav a{
+    color:#7D7F84;
+    text-decoration: none;
+    justify-content: center;
+    font-size: .9em;
+}
+
+nav hr{
+    width: 2.3em;
+    margin: -.8em auto;
+    border-bottom: 3px solid #ADFF2F;
+}
+
+/* footer */
 
 footer{
     max-width: 100vw;
