--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,35 @@ aside .fa-sharp{
 }
 
 
+
+/* navbar */
+
+nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5em;
+    padding: .5em 0;
+    justify-content: center;
+    line-height: 2em;
+}
+
+nav li{
+    list-style: none;
+}
+
+nav a{
+    color:#D2D2D2;
+    text-decoration: none;
+    justify-content: center;
+    font-size: .9em;
+}
+
+nav hr{
+    width: 2.3em;
+    margin: -.5em auto;
+    border-bottom: 3px solid #ADFF2F;
+}
+
 /* main */
 
 main{
@@ -102,32 +131,53 @@ main{
     padding-top: 85px;
    }
 
-/* navbar */
-
-nav ul{
+.container1-main{
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5em;
-    padding: .3em 0;
-    justify-content: center;
-    line-height: 3em;
+    gap: .5em;
+    padding: 0 1em;
+} 
+
+.photo-flex{
+    flex: 1 0 45%;
 }
 
-nav li{
-    list-style: none;
+main h1{
+    color: white;
+    font-size: 1.5em;
+    margin: 1em .5em;
 }
 
-nav a{
-    color:#7D7F84;
-    text-decoration: none;
-    justify-content: center;
-    font-size: .9em;
+main img{
+    width: 100%;
 }
 
-nav hr{
-    width: 2.3em;
-    margin: -.8em auto;
-    border-bottom: 3px solid #ADFF2F;
+main h2{
+    color: white;
+    font-size: 1em;
+    text-align: center;
+    margin-top: 1em;
+}
+
+.photo-flex h5{
+    color: #D2D2D2;
+    font-size: .8em;
+    text-align: center;
+    margin-top: .5em;
+}
+
+main h5{
+    color: #D2D2D2;
+    font-size: .8em;
+    margin: -.5em 1em 1em;
+}
+
+.circle-img{
+    object-fit: cover;
+    border-radius: 50%;
+    height: 13.5em;
+    width: 13.5em;
+    align-self:center;
 }
 
 /* footer */
