--- a/css/style.css
+++ b/css/style.css
@@ -182,13 +182,123 @@ main h5{
 
 /* footer */
 
+/* section1 */
+
 footer{
     max-width: 100vw;
     height: 100px;
     background-color:#282828;
     z-index: 99;
+    display: flex;
 }
 
+.footer-flex1{
+    display: flex;
+    flex: 0 1 25%;
+}
 
+.footer-flex1 img{
+    max-width: 100%;
+    padding: 2em 1em;
+}
 
+footer h2{
+    color: white;
+    font-size: 1em;
+    margin-top: 1.6em;
+}
 
+footer h5{
+    color: #D2D2D2;
+    font-size: .8em; 
+}
+
+.icon-ft-sec1{
+    margin:1.9em 2em ;
+}
+
+footer .fa-heart,
+footer .fa-folder{
+    color: #D2D2D2;
+    font-size: 1.2em;
+    margin-right: .5em;
+}
+
+/* section2 */
+
+.footer-flex2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex: 0 1 50%;
+    gap: 1.5em;
+}
+
+.footer-flex2 .container-audio{
+    width: 28vw;
+    height: .3em;
+    background-color: #5A5A5A;
+    border-radius: 30px;
+}
+
+.footer-flex2 .fa-solid{
+    font-size: 1em;
+    color: white;
+    margin-top: 1em;
+ }
+
+ .fa-play{
+    padding: .1em .25em;
+    border: .2em solid white;
+    border-radius: 100%;
+    position: relative;
+    top:-.2em
+ }
+
+.footer-flex2 h6{
+    color: white;
+}
+
+.flex-audio{
+    display: flex;
+    gap: 0.2em;
+    margin-bottom: 3em;
+}
+
+h6{
+    position: relative;
+    top: -.3em;
+}
+
+/* section3 */
+
+.footer-flex3 .container-audio{
+    margin:2.7em 0 ;
+}
+
+.footer-flex3 .container-audio{
+    width: 10vw;
+    height: .3em;
+    background-color: #5A5A5A;
+    border-radius: 30px;
+}
+
+.volume-bar{
+    width:30%;
+    height:.3em;
+    background-color: #C1C1C1;
+    border-radius: 30%;
+}
+
+.footer-flex3{
+    display: flex;
+    flex: 0 1 25%;
+    gap: .5em;
+    padding: 0 .3em;
+}
+
+ .footer-flex3 .fa-solid{
+    font-size: 1em;
+    color: white;
+    margin:2.4em 0 ;
+ }
