--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,13 @@ aside{
     position: relative;
 }
 
-aside img{
+.container-aside img{
     filter: invert(1);
     width: 60%;
     margin-left: .5em;
 }
 
-aside .fa-sharp{
+.container-aside .fa-sharp{
     color:#D2D2D2;
     font-size:1.5em;
     margin-left: .4em;
@@ -88,7 +88,6 @@ aside .fa-sharp{
     margin-bottom: .4em;
     border-radius: 100%;
 }
-
 
 
 /* navbar */
@@ -129,7 +128,7 @@ main{
     background-color: #141922; 
     overflow-y: scroll;
     padding-top: 85px;
-   }
+}
 
 .container1-main{
     display: flex;
@@ -178,6 +177,13 @@ main h5{
     height: 13.5em;
     width: 13.5em;
     align-self:center;
+}
+
+@media (min-width:639px){
+    .circle-img{  
+        height: 10.5em;
+        width: 10.5em;
+    }
 }
 
 /* footer */
@@ -253,7 +259,7 @@ footer .fa-folder{
     border-radius: 100%;
     position: relative;
     top:-.2em
- }
+}
 
 .footer-flex2 h6{
     color: white;
@@ -297,8 +303,153 @@ h6{
     padding: 0 .3em;
 }
 
- .footer-flex3 .fa-solid{
+.footer-flex3 .fa-solid{
     font-size: 1em;
     color: white;
     margin:2.4em 0 ;
- }
+}
+
+/* aside2 */
+
+@media (min-width:639px){
+    
+    main{
+        inset: 0 0 0 230px;
+    }
+    
+    .container-header{
+        inset: 0 0 auto 230px;
+    }
+
+    .container-aside{
+        display: none;
+    }
+
+    aside{
+        max-width: 230px;
+    }
+    
+    .logo-aside2{
+        max-width: 60%;
+        margin: 1em 1.5em;
+    }
+
+    .box-aside2{
+        display: flex;
+        gap: .5em;
+        padding: .4em 1.5em;
+        border-left: 4px solid #ADFF2F;
+    }
+
+    .box2-aside2{
+        display: flex;
+        gap: .5em;
+        padding: .2em 1.8em;
+    }
+
+    .img-aside2{
+        max-width: 15%;
+        color:#D2D2D2;
+    }
+     
+    .box-aside2 h5{
+        color: #D2D2D2;
+        font-size: 1em; 
+        align-self: center;
+    }
+
+    .box2-aside2 h5{
+        color: #D2D2D2;
+        font-size: 1em; 
+        align-items: center;
+    }
+
+    .title-aside2{
+        font-size: 1em;
+        color:white;
+        margin: 1em 1.8em;
+    }
+
+    .square-aside2{
+        display: flex;
+        gap: 1em;
+        margin: 1em 1.8em;
+    }
+
+    .fa-square-plus{
+        color:#D2D2D2;
+        font-size: 2.5em;
+    }
+
+    .square-aside2 h5{
+        color: #D2D2D2;
+        font-size: 1em; 
+        align-self: center;
+    }
+    
+    .container-aside2 ul{
+        display: flex;
+        flex-direction: column;
+        margin-left: 1.8em;
+        gap: .3em;
+    }
+
+    .container-aside2 li{
+        list-style: none;
+        color: #D2D2D2;
+    }
+
+    .box3-aside2{
+        display: flex;
+        gap: .5em;
+        margin-left: 1.8em;
+        margin-top: 5em;
+    }
+
+    .box3-aside2 h5{
+        color: #D2D2D2;
+        font-size: 1em; 
+        align-self: center;
+    }
+
+    .box4-aside2{
+        display: flex;
+        gap: .5em;
+        margin-left: 1.2em;
+        margin-right: 1.2em;
+        margin-top: 1em;
+        padding-top: 1em;
+        border-top: 1px solid #D2D2D2;
+    }
+
+
+    .box3-aside2 .fa-arrow-down{
+        color:#D2D2D2;
+        font-size:.5em;
+        padding: .2em .3em;
+        border: 1px solid #D2D2D2 ;
+        border-radius: 100%;
+    }
+    
+    .fa-circle-user{
+        color:#D2D2D2 ;
+        background-color:white;
+        font-size:2em;
+        border-radius: 100%;
+    }
+
+    .box4-aside2 h2{
+        font-size: 1em;
+        color:white;
+        margin-top: .4em;
+    }
+
+}
+
+@media (max-width:638px){
+    .container-aside2{
+        display: none;
+    }
+}
+
+
