--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html{
     position: fixed;
     inset: 0 0 auto 50px;
     background-color: black;
-    z-index: 97; 
+    z-index: 98; 
 }
 
 .btn-upgrade{
@@ -30,7 +30,7 @@ html{
     position: fixed;
     top: 1.6em;
     right: 1.9em;
-    z-index: 98;
+    z-index: 99;
 }
 
 .btn-upgrade:hover{
@@ -46,6 +46,7 @@ aside{
     color: white;
     padding-top: 0.2em;
     position: relative;
+    z-index: 96;
 }
 
 .container-aside img{
@@ -110,6 +111,7 @@ aside{
 
 
 /* navbar */
+
 
 nav ul{
     display: flex;
@@ -245,7 +247,7 @@ footer{
     max-width: 100vw;
     height: 100px;
     background-color:#282828;
-    z-index: 99;
+    z-index: 98;
     display: flex;
 }
 
@@ -270,6 +272,12 @@ footer h5{
     font-size: .8em; 
 }
 
+footer h5:hover{
+    border-bottom: 1px solid white;
+    color: white;
+    cursor: pointer;
+}
+
 .icon-ft-sec1{
     margin:1.9em 2em ;
 }
@@ -279,6 +287,11 @@ footer .fa-folder{
     color: #D2D2D2;
     font-size: 1.2em;
     margin-right: .5em;
+}
+
+footer .fa-heart:hover,
+footer .fa-folder:hover{
+    color: white;
 }
 
 /* section2 */
@@ -350,6 +363,38 @@ h6{
     height:.3em;
     background-color: #C1C1C1;
     border-radius: 30%;
+    position: relative;
+}
+
+.volume-bar:hover{
+    background-color: #ADFF2F;
+}
+
+.volume-bar .bottom{
+    width: .9em;
+    height: .9em;
+    border-radius: 100%;
+    background-color: white;
+    position: absolute;
+    top: -.3em;
+    left: 2em;
+    opacity: 0;
+}
+
+.volume-bar .bottom2{
+    width: .9em;
+    height: .9em;
+    border-radius: 100%;
+    background-color: white;
+    position: absolute;
+    top: -.3em;
+    left: .9em;
+    opacity: 0;
+}
+
+.volume-bar:hover .bottom,
+.volume-bar:hover .bottom2{
+    opacity: 1;
 }
 
 .footer-flex3{
@@ -550,7 +595,22 @@ h6{
         right: 3.5em;
     }
 
-    
+    /* footer */
+
+    .footer-text{
+        margin-top: .5em;
+    }
+
+    footer h5{
+        white-space: nowrap;
+    }
+
+    /* section2 */
+
+    .volume-bar .bottom{
+        left: 2.5em;
+    }
+
 }
 
 @media (max-width:638px){
@@ -589,6 +649,29 @@ h6{
         right: 3em;
     }
 
+    /* footer */
+
+    .footer-text{
+        margin-top: .5em;
+    }
+
+    footer h5{
+        white-space: nowrap;
+    }
+
+    .icon-ft-sec1{
+        display: flex;
+        margin: 0 0 ;
+        padding-left: 1.5em;
+        align-items: center;
+    }
+
+    /* section2 */
+
+    .volume-bar .bottom{
+        left: 4em;
+    }
+
 }
 
 @media (min-width:1440px){
@@ -615,6 +698,31 @@ h6{
 
     /* footer */
 
+    .footer-text{
+        margin-top: .5em;
+    }
+
+    footer h5{
+        white-space: nowrap;
+    }
+
+    .icon-ft-sec1{
+        display: flex;
+        margin: 0 0 ;
+        padding-left: 1.5em;
+        align-items: center;
+    }
+
+    /* section2 */
+
+    .volume-bar .bottom{
+        left: 7.5em;
+    }
+
+    .volume-bar .bottom2{
+        left: 2.5em;
+    }
+
     .footer-flex2{
         flex: 0 0 50%;
         justify-content: center;
@@ -627,4 +735,3 @@ h6{
     }
     
 }    
-
